@@ -317,6 +317,12 @@ android {
     android.testOptions {
         unitTests.all {
             it.useJUnitPlatform()
+            it.jvmArgs = listOf(
+                "--add-opens",
+                "java.base/java.lang=ALL-UNNAMED",
+                "--add-opens",
+                "java.base/java.lang.reflect=ALL-UNNAMED"
+            )
         }
     }
 
